--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "gabriel",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.3.4",
     "nodemon": "^3.0.1"
   }
 }
